add avatar readyplayer.me and start fixing